# nexus-chess

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
NexusChess/: CMakeLists.txt  NexusChess.cpp  NexusChess.h
